--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support:appcompat-v7:26.0.2'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.squareup.okhttp3:okhttp:3.4.1'
     implementation 'com.google.code.gson:gson:2.7'
@@ -42,9 +42,12 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:2.1.0'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
     implementation 'com.android.support:design:26.1.0'
-    implementation 'com.android.support:recyclerview-v7:26.1.0'
+    implementation 'com.android.support:recyclerview-v7:26.0.2'
     implementation 'com.android.support:cardview-v7:26.1.0'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.2'
+    implementation 'com.sothree.slidinguppanel:library:3.4.0'
+    implementation 'org.greenrobot:eventbus:3.1.1'
+    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.22'
     testImplementation 'junit:junit:4.12'
 
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
